--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,11 @@
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-        <h1>Aqui haremos un Blogpost</h1>
-        <p>Un parrafo de inicio</p>
+        <div id="container">
+            <div id="post" >
+                <h1>Un titulo mas atractivo e interesante</h1>
+                <p>Un parrafo mucho mas agradable esteticamente</p>
+            </div>
+        </div>
     </body>
 </html>
