Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post" >
                 <h1>Un titulo mas atractivo e interesante</h1>
                 <p>Un parrafo mucho mas agradable esteticamente</p>
