--- a/blogpost.html
+++ b/blogpost.html
@@ -1,14 +1,15 @@
 <html>
     <head>
         <title>
-            El titulo del post
+            El titulo del post  
         </title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                Hyperblog
+                <span id="tagline">Tu blog culero</span>
             </div>
             <div id="post" >
                 <h1>Un titulo mas atractivo e interesante</h1>
