Agregado contenido adicional del blog con otra tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
             <div id="post" >
                 <h1>Un titulo mas atractivo e interesante</h1>
                 <p>Un parrafo mucho mas agradable esteticamente</p>
+                <p>Un parrafo Que no tiene ningun sentido</p>
             </div>
         </div>
     </body>
