--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog culero</span>
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post" >
                 <h1>Un titulo mas atractivo e interesante</h1>
