Puse suscribete, puse azul y la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,12 +9,13 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog culero</span>
+                <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post" >
                 <h1>Un titulo mas atractivo e interesante</h1>
                 <p>Un parrafo mucho mas agradable esteticamente</p>
                 <p>Un parrafo Que no tiene ningun sentido</p>
+                <p>Suscribete</p>
             </div>
         </div>
     </body>
