Intentanto subir los archivos

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
                 <p>Un parrafo mucho mas agradable esteticamente</p>
                 <p>Un parrafo Que no tiene ningun sentido</p>
                 <p>Suscribete</p>
+                <p>Actualizacion</p>
             </div>
         </div>
     </body>
